--- a/AttendanceSystem/Components/Pages/Survey.razor
+++ b/AttendanceSystem/Components/Pages/Survey.razor
@@ -43,12 +43,16 @@
 
     /* middle box */
     .form-box {
+    margin-top: 3%;
+    display: flex;
+    flex-direction: column; /*stack vertically*/
     width: 90%;
     max-width: 600px;
     background: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow: hidden;
+    height: 85%;
     }
 
     /* title  */
@@ -62,14 +66,17 @@
     }
 
     .content {
-    padding: 20px;
+    padding: 22px;
+    overflow-y: auto; /*scroll within box for questions*/
+    flex-grow: 1;
     }
 
     /* Student ID */
     .input-field {
     width: calc(100% - 16px);
     padding: 8px;
-    margin-top: 5px;
+    margin-top: -5px;
+    margin-bottom: 8px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
@@ -202,6 +209,8 @@
     // temp example question box
     private List<string> rawQuestions = new List<string>
     {
+        "What is the region of diagram that consist of an operator or label?\tGRASP\tFrame\tUML\tCRC",
+        "What is the region of diagram that consist of an operator or label?\tGRASP\tFrame\tUML\tCRC",
         "What is the region of diagram that consist of an operator or label?\tGRASP\tFrame\tUML\tCRC",
         "True or False: Obligations can and do vary significantly by context.\tTrue\tFalse",
         "What are Benefits of Design by Contract?\t SOLID’s “single responsibility” principle at method level\t“Pseudocode Programming Process\tBasis for “Programming by Intent”\tunit testing\tAll of the above"
