--- a/ProfessorApp/Views/AttendancePage.xaml
+++ b/ProfessorApp/Views/AttendancePage.xaml
@@ -108,8 +108,13 @@
                                         Margin="50,0,0,0"
                                         Background="DarkOrange"
                                         Clicked="OnChangeAttendanceClicked"
+                                        ContentLayout="Left, 10"
                                         Text="Change Attendance"
-                                        TextColor="Black" />
+                                        TextColor="White">
+                                        <Button.ImageSource>
+                                            <FontImageSource FontFamily="ProjectFonts" Glyph="L" />
+                                        </Button.ImageSource>
+                                    </Button>
                                 </Grid>
                             </Frame>
                         </DataTemplate>
