--- a/ProfessorApp/Views/CoursePage.xaml
+++ b/ProfessorApp/Views/CoursePage.xaml
@@ -65,9 +65,14 @@
                         Margin="0,10,0,10"
                         BackgroundColor="Green"
                         Clicked="OnAddCourse"
+                        ContentLayout="Left, 10"
                         MaximumWidthRequest="400"
                         Text="Add a new course"
-                        TextColor="White" />
+                        TextColor="White">
+                        <Button.ImageSource>
+                            <FontImageSource FontFamily="ProjectFonts" Glyph="K" />
+                        </Button.ImageSource>
+                    </Button>
                 </StackLayout>
 
             </VerticalStackLayout>
