--- a/ProfessorApp/Views/StudentManagement.xaml
+++ b/ProfessorApp/Views/StudentManagement.xaml
@@ -75,27 +75,45 @@
                     Margin="0,15,0,15"
                     BackgroundColor="Green"
                     Clicked="OnAddStudentClicked"
+                    ContentLayout="Left, 10"
+                    FontSize="17"
                     Text="Add Student"
                     TextColor="White"
-                    WidthRequest="400" />
+                    WidthRequest="400">
+                    <Button.ImageSource>
+                        <FontImageSource FontFamily="ProjectFonts" Glyph="K" />
+                    </Button.ImageSource>
+                </Button>
 
                 <!--  Delete Student Button  -->
                 <Button
                     Margin="0,15,0,15"
                     BackgroundColor="Red"
                     Clicked="OnDeleteStudentClicked"
+                    ContentLayout="Left, 10"
+                    FontSize="17"
                     Text="Delete Student"
                     TextColor="White"
-                    WidthRequest="400" />
+                    WidthRequest="400">
+                    <Button.ImageSource>
+                        <FontImageSource FontFamily="ProjectFonts" Glyph="E" />
+                    </Button.ImageSource>
+                </Button>
 
                 <!--  Delete Course Button  -->
                 <Button
                     Margin="0,15,0,15"
                     BackgroundColor="Red"
                     Clicked="ConfirmDelete"
+                    ContentLayout="Left, 10"
+                    FontSize="17"
                     Text="Delete Course"
                     TextColor="White"
-                    WidthRequest="400" />
+                    WidthRequest="400">
+                    <Button.ImageSource>
+                        <FontImageSource FontFamily="ProjectFonts" Glyph="E" />
+                    </Button.ImageSource>
+                </Button>
 
             </VerticalStackLayout>
         </ScrollView>
