Update course sessions via menu

--- a/ProfessorApp/Views/CourseNavigation.xaml
+++ b/ProfessorApp/Views/CourseNavigation.xaml
@@ -37,9 +37,9 @@
 
                 <Button
                     BackgroundColor="DarkOrange"
-                    Clicked="GoToStudentManagmentPage"
+                    Clicked="GoToStudentManagementPage"
                     MaximumWidthRequest="600"
-                    Text="Student Managment"
+                    Text="Student Management"
                     TextColor="White" />
                 <Button
                     BackgroundColor="DarkOrange"
