--- a/AttendanceSystem/Components/Pages/Home.razor
+++ b/AttendanceSystem/Components/Pages/Home.razor
@@ -1,12 +1,22 @@
 ﻿@page "/home"
 
 <style>
+
+    /* getting rid of default padding and white border */
+    html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background-color: #f0f0f0;
+    }
+
     .container {
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
         background-color: #f0f0f0;
+        font-family: 'Roboto', sans-serif;
     }
 
     .form-box {
@@ -38,6 +48,11 @@
         color: #333;
     }
 </style>
+
+<!-- link to font  -->
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
 
 <div class="container">
     <div class="form-box">
